fix: lower nested header z-index

--- a/src/assets/properties-panel.css
+++ b/src/assets/properties-panel.css
@@ -830,7 +830,7 @@ textarea.bio-properties-panel-input {
   background-color: var(--color-white);
   border-bottom: 1px solid var(--sticky-group-bottom-border-color);
   top: 32px;
-  z-index: 10;
+  z-index: 9;
 }
 
 /* Nested list dot */
